F!! Added CrossPlatformReporters, with VSCode (#204)
Co-Authored-By: Llewellyn Falco <llewellyn.falco@gmail.com>
Co-Authored-By: Nitsan Avni <nitsanav@gmail.com>

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -84,6 +84,8 @@ add_library(${PROJECT_NAME}
         reporters/CommandReporter.cpp
         reporters/ConvertForCygwin.h
         reporters/ConvertForCygwin.cpp
+        reporters/CrossPlatformReporters.h
+        reporters/CrossPlatformReporters.cpp
         reporters/CustomReporter.h
         reporters/CustomReporter.cpp
         reporters/DefaultFrontLoadedReporter.h
