--- a/tests/UT_Tests/CMakeLists.txt
+++ b/tests/UT_Tests/CMakeLists.txt
@@ -18,7 +18,7 @@ if ((CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION GREATER
                 DEPENDENCIES ${PROJECT_NAME})
     endif ()
 
-    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND CMAKE_CXX_SIMULATE_ID MATCHES "MSVC")
+    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" AND CMAKE_CXX_COMPILER_FRONTEND_VARIANT MATCHES "MSVC")
         target_compile_options(${PROJECT_NAME} PRIVATE
                 /W4
                 /WX
