--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(Boost_Tests)
+#add_subdirectory(Boost_Tests)
 add_subdirectory(Catch2_Tests)
 add_subdirectory(CppUTest_Tests)
 add_subdirectory(GoogleTest_Tests)
