--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -140,20 +140,20 @@ jobs:
       matrix:
         include:
           - job-name: xcode-14.3
-            os-version: '13.4'
+            os-version: 'latest'
             xcode-version: '14.3'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
           - job-name: 'xcode-14.3-ninja in-source'
             xcode-version: '14.3'
-            os-version: '13.4'
+            os-version: 'latest'
             generator: '"Ninja"'
             relative_build_dir_path: ''
 
           - job-name: 'xcode-14.3-ninja out-of-source'
             xcode-version: '14.3'
-            os-version: '13.4'
+            os-version: 'latest'
             generator: '"Ninja"'
             relative_build_dir_path: '../'
 
