--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -48,6 +48,6 @@ jobs:
           cd cmake-build
           cmake --version
           REM Release gives 'File too big' errors
-          cmake -G "MinGW Makefiles" .. -DCMAKE_BUILD_TYPE=Release
+          cmake -G "MinGW Makefiles" .. -DCMAKE_BUILD_TYPE=Release -DAPPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION=OFF
           cmake --build . --parallel 4
           ctest --verbose --output-on-failure -C Release
