e!! Turn off almost all CMake builds
... except APPROVAL_TESTS_BUILD_TESTING & APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION

--- a/.github/workflows/cygwin.yml
+++ b/.github/workflows/cygwin.yml
@@ -36,7 +36,7 @@ jobs:
             cd       cmake-build
             # Debug gives Assembler messages: ... CMakeFiles/Catch2_Tests.dir/main.cpp.o: 'file too big'
             cmake --version
-            cmake -G 'Unix Makefiles' .. -DCMAKE_BUILD_TYPE=Release -DAPPROVAL_TESTS_BUILD_DOCS=OFF
+            cmake -G 'Unix Makefiles' .. -DCMAKE_BUILD_TYPE=Release -DAPPROVAL_TESTS_BUILD_DOCS=OFF -DAPPROVAL_TESTS_BUILD_EXAMPLES=OFF -DAPPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2=OFF -DAPPROVAL_TESTS_BUILD_THIRD_PARTY_UT=OFF -DAPPROVAL_TESTS_BUILD_EXAMPLES=OFF -DAPPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION=OFF -DAPPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION=OFF -DAPPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION=OFF -DAPPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION=OFF -DAPPROVAL_TESTS_ENABLE_GOOGLETEST_INTEGRATION=OFF -DAPPROVAL_TESTS_ENABLE_UT_INTEGRATION=OFF
           }
           basic
         shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
