--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,25 +63,25 @@ if (APPROVAL_TESTS_BUILD_DOCS)
     add_subdirectory(doc)
 endif ()
 
-#message("CMAKE_VERSION = ${CMAKE_VERSION}")
-#message("CMAKE_GENERATOR = ${CMAKE_GENERATOR}")
-#message("CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
-#message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
-#message("CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
-#message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
-#message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
-#message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
-#message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
-#message("NOT_SUBPROJECT = ${NOT_SUBPROJECT}")
-#message("APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2 = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2}")
-#message("APPROVAL_TESTS_BUILD_THIRD_PARTY_DOCTEST = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_DOCTEST}")
-#message("APPROVAL_TESTS_BUILD_THIRD_PARTY_UT = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_UT}")
-#message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
-#message("APPROVAL_TESTS_BUILD_EXAMPLES = ${APPROVAL_TESTS_BUILD_EXAMPLES}")
-#message("APPROVAL_TESTS_BUILD_DOCS = ${APPROVAL_TESTS_BUILD_DOCS}")
-#message("APPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION}")
-#message("APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION}")
-#message("APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION}")
-#message("APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION}")
-#message("APPROVAL_TESTS_ENABLE_GOOGLETEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_GOOGLETEST_INTEGRATION}")
-#message("APPROVAL_TESTS_ENABLE_UT_INTEGRATION = ${APPROVAL_TESTS_ENABLE_UT_INTEGRATION}")
+message("CMAKE_VERSION = ${CMAKE_VERSION}")
+message("CMAKE_GENERATOR = ${CMAKE_GENERATOR}")
+message("CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
+message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
+message("CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
+message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
+message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
+message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
+message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
+message("NOT_SUBPROJECT = ${NOT_SUBPROJECT}")
+message("APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2 = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2}")
+message("APPROVAL_TESTS_BUILD_THIRD_PARTY_DOCTEST = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_DOCTEST}")
+message("APPROVAL_TESTS_BUILD_THIRD_PARTY_UT = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_UT}")
+message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
+message("APPROVAL_TESTS_BUILD_EXAMPLES = ${APPROVAL_TESTS_BUILD_EXAMPLES}")
+message("APPROVAL_TESTS_BUILD_DOCS = ${APPROVAL_TESTS_BUILD_DOCS}")
+message("APPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_BOOST_TEST_INTEGRATION}")
+message("APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION}")
+message("APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_CPPUTEST_INTEGRATION}")
+message("APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_DOCTEST_INTEGRATION}")
+message("APPROVAL_TESTS_ENABLE_GOOGLETEST_INTEGRATION = ${APPROVAL_TESTS_ENABLE_GOOGLETEST_INTEGRATION}")
+message("APPROVAL_TESTS_ENABLE_UT_INTEGRATION = ${APPROVAL_TESTS_ENABLE_UT_INTEGRATION}")
