e Mac CI builds now use macos-latest (12) and XCode 14.2

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -139,21 +139,21 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - job-name: xcode-14.3
-            os-version: '13.4'
-            xcode-version: '14.3'
+          - job-name: xcode-14.2
+            os-version: 'latest'
+            xcode-version: '14.2'
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
-          - job-name: 'xcode-14.3-ninja in-source'
-            xcode-version: '14.3'
-            os-version: '13.4'
+          - job-name: 'xcode-14.2-ninja in-source'
+            xcode-version: '14.2'
+            os-version: 'latest'
             generator: '"Ninja"'
             relative_build_dir_path: ''
 
-          - job-name: 'xcode-14.3-ninja out-of-source'
-            xcode-version: '14.3'
-            os-version: '13.4'
+          - job-name: 'xcode-14.2-ninja out-of-source'
+            xcode-version: '14.2'
+            os-version: 'latest'
             generator: '"Ninja"'
             relative_build_dir_path: '../'
 
