. e Try using mingw Mingw-w64 12.2.0 supplied by GitHub Actions, on windows-2022
https://github.com/actions/runner-images/blob/win19/20230924.1/images/win/Windows2022-Readme.md

--- a/.github/workflows/mingw-native.yml
+++ b/.github/workflows/mingw-native.yml
@@ -11,10 +11,10 @@ on:
     - cron: '16 0 * * 3,6'  # <https://crontab.guru/#16_0_*_*_3,6> - "At 00:16 on Wednesday and Saturday."
 
 jobs:
-  MinGW:
+  MinGW-native:
     # Pinned windows version due to:
     # https://github.com/egor-tensin/setup-mingw/issues/6
-    runs-on: windows-2019
+    runs-on: windows-2022
     strategy:
       fail-fast: false
     env:
