--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -14,6 +14,7 @@ jobs:
   MinGW:
     # Pinned windows version due to:
     # https://github.com/egor-tensin/setup-mingw/issues/6
+    if: false # Disable this platform temporarily
     runs-on: windows-2019
     strategy:
       fail-fast: false
