--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -14,10 +14,8 @@ jobs:
   MinGW:
     # Pinned windows version due to:
     # https://github.com/egor-tensin/setup-mingw/issues/6
-    if: false # Disable this platform temporarily
+    # if: false # Disable this platform temporarily
     runs-on: windows-2019
-    strategy:
-      fail-fast: false
     env:
       BUILD_PATH: build_space
     steps:
