--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -24,7 +24,7 @@ jobs:
       - name: set up python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
       - uses: ./.github/actions/setup-conan
 
       - name: install boost
