. e Add clang13 to main Linux build

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -72,6 +72,13 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
+          - job-name: 'clang13'
+            os-version: '20.04'
+            c-compiler: 'clang-13'
+            cxx-compiler: 'clang++-13'
+            generator: '"Unix Makefiles"'
+            relative_build_dir_path: ''
+
           - job-name: 'gcc9'
             os-version: '20.04'
             c-compiler: 'gcc-9'
