. e Debug the CMake CXX variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,9 +68,10 @@ endif ()
 #message("CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
 #message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
 #message("CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
-#message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
-#message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
-#message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
+message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
+message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
+message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
+message("CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
 #message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
 #message("NOT_SUBPROJECT = ${NOT_SUBPROJECT}")
 #message("APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2 = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2}")
