! e Disable All Linux builds except clang13

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -51,26 +51,26 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - job-name: 'clang10'
-            os-version: '20.04'
-            c-compiler: 'clang-10'
-            cxx-compiler: 'clang++-10'
-            generator: '"Unix Makefiles"'
-            relative_build_dir_path: ''
-
-          - job-name: 'clang11'
-            os-version: '20.04'
-            c-compiler: 'clang-11'
-            cxx-compiler: 'clang++-11'
-            generator: '"Unix Makefiles"'
-            relative_build_dir_path: ''
-
-          - job-name: 'clang12'
-            os-version: '20.04'
-            c-compiler: 'clang-12'
-            cxx-compiler: 'clang++-12'
-            generator: '"Unix Makefiles"'
-            relative_build_dir_path: ''
+#          - job-name: 'clang10'
+#            os-version: '20.04'
+#            c-compiler: 'clang-10'
+#            cxx-compiler: 'clang++-10'
+#            generator: '"Unix Makefiles"'
+#            relative_build_dir_path: ''
+#
+#          - job-name: 'clang11'
+#            os-version: '20.04'
+#            c-compiler: 'clang-11'
+#            cxx-compiler: 'clang++-11'
+#            generator: '"Unix Makefiles"'
+#            relative_build_dir_path: ''
+#
+#          - job-name: 'clang12'
+#            os-version: '20.04'
+#            c-compiler: 'clang-12'
+#            cxx-compiler: 'clang++-12'
+#            generator: '"Unix Makefiles"'
+#            relative_build_dir_path: ''
 
           - job-name: 'clang13'
             os-version: '22.04'
@@ -79,47 +79,47 @@ jobs:
             generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
-          - job-name: 'gcc9'
-            os-version: '20.04'
-            c-compiler: 'gcc-9'
-            cxx-compiler: 'g++-9'
-            generator: '"Unix Makefiles"'
-            relative_build_dir_path: ''
-
-          - job-name: 'gcc10'
-            os-version: '20.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
-            generator: '"Unix Makefiles"'
-            relative_build_dir_path: ''
-
-          - job-name: 'gcc10 unity'
-            os-version: '20.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
-            generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes'
-            relative_build_dir_path: ''
-
-          - job-name: 'gcc10 ninja in-source'
-            os-version: '20.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
-            generator: '"Ninja"'
-            relative_build_dir_path: ''
-
-          - job-name: 'gcc10 ninja out-of-source'
-            os-version: '20.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
-            generator: '"Ninja"'
-            relative_build_dir_path: '../'
-
-          - job-name: 'gcc10 ninja-unity'
-            os-version: '20.04'
-            c-compiler: 'gcc-10'
-            cxx-compiler: 'g++-10'
-            generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes'
-            relative_build_dir_path: ''
+#          - job-name: 'gcc9'
+#            os-version: '20.04'
+#            c-compiler: 'gcc-9'
+#            cxx-compiler: 'g++-9'
+#            generator: '"Unix Makefiles"'
+#            relative_build_dir_path: ''
+#
+#          - job-name: 'gcc10'
+#            os-version: '20.04'
+#            c-compiler: 'gcc-10'
+#            cxx-compiler: 'g++-10'
+#            generator: '"Unix Makefiles"'
+#            relative_build_dir_path: ''
+#
+#          - job-name: 'gcc10 unity'
+#            os-version: '20.04'
+#            c-compiler: 'gcc-10'
+#            cxx-compiler: 'g++-10'
+#            generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes'
+#            relative_build_dir_path: ''
+#
+#          - job-name: 'gcc10 ninja in-source'
+#            os-version: '20.04'
+#            c-compiler: 'gcc-10'
+#            cxx-compiler: 'g++-10'
+#            generator: '"Ninja"'
+#            relative_build_dir_path: ''
+#
+#          - job-name: 'gcc10 ninja out-of-source'
+#            os-version: '20.04'
+#            c-compiler: 'gcc-10'
+#            cxx-compiler: 'g++-10'
+#            generator: '"Ninja"'
+#            relative_build_dir_path: '../'
+#
+#          - job-name: 'gcc10 ninja-unity'
+#            os-version: '20.04'
+#            c-compiler: 'gcc-10'
+#            cxx-compiler: 'g++-10'
+#            generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes'
+#            relative_build_dir_path: ''
 
     name: Linux ${{ matrix.job-name }}
     env:
