--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,9 @@ message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
 message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
 message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
 message("CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
+message("CXX_STANDARD = ${CXX_STANDARD}")
+message("CXX_STANDARD_REQUIRED = ${CXX_STANDARD_REQUIRED}")
+message("CXX_EXTENSIONS = ${CXX_EXTENSIONS}")
 #message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
 #message("NOT_SUBPROJECT = ${NOT_SUBPROJECT}")
 #message("APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2 = ${APPROVAL_TESTS_BUILD_THIRD_PARTY_CATCH2}")
