Revert ". e Try setting flags for clang14 build"
This reverts commit 8890ddd6999b9f1007ca1059edbd6d1f2a0eef19.

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -83,7 +83,7 @@ jobs:
             os-version: '22.04'
             c-compiler: 'clang-14'
             cxx-compiler: 'clang++-14'
-            generator: '"Unix Makefiles" "-DCMAKE_CXX_FLAGS=-stdlib=libc++ -std=c++20"'
+            generator: '"Unix Makefiles"'
             relative_build_dir_path: ''
 
           - job-name: 'clang15'
