--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -76,14 +76,14 @@ jobs:
             os-version: '22.04'
             c-compiler: 'clang-13'
             cxx-compiler: 'clang++-13'
-            generator: '"Unix Makefiles"'
+            generator: '"Unix Makefiles" "-DCMAKE_CXX_FLAGS=-stdlib=libc++ -std=c++20"'
             relative_build_dir_path: ''
 
           - job-name: 'clang14'
             os-version: '22.04'
             c-compiler: 'clang-14'
             cxx-compiler: 'clang++-14'
-            generator: '"Unix Makefiles"'
+            generator: '"Unix Makefiles" "-DCMAKE_CXX_FLAGS=-stdlib=libc++ -std=c++20"'
             relative_build_dir_path: ''
 
           - job-name: 'clang15'
