--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -154,7 +154,7 @@ jobs:
 
   macOS:
     needs: clang-format
-    if: false # Disable this platform temporarily
+    # if: false # Disable this platform temporarily
     runs-on: macos-${{ matrix.os-version }}
     strategy:
       fail-fast: false
@@ -198,7 +198,7 @@ jobs:
 
   Windows:
     needs: clang-format
-    if: false # Disable this platform temporarily
+    # if: false # Disable this platform temporarily
     runs-on: windows-${{ matrix.os-version }}
     strategy:
       fail-fast: false
