--- a/.github/workflows/cygwin2.yml
+++ b/.github/workflows/cygwin2.yml
@@ -17,6 +17,11 @@ jobs:
     timeout-minutes: 42 # See https://github.com/approvals/ApprovalTests.cpp/issues/192
     strategy:
       fail-fast: false
+
+    defaults:
+      run:
+        shell: C:\cygwin\bin\bash.exe --noprofile --norc -o igncr -eo pipefail '{0}'
+
     steps:
       - uses: actions/checkout@v4
 
@@ -35,7 +40,7 @@ jobs:
           # Debug gives Assembler messages: ... CMakeFiles/Catch2_Tests.dir/main.cpp.o: 'file too big'
           cmake --version
           cmake -G 'Unix Makefiles' .. -DCMAKE_BUILD_TYPE=Release -DAPPROVAL_TESTS_BUILD_DOCS=OFF -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
-        shell: C:\cygwin\bin\bash.exe '{0}'
+#        shell: C:\cygwin\bin\bash.exe '{0}'
 
       - name: Build
         run: |
