--- a/.github/workflows/cygwin2.yml
+++ b/.github/workflows/cygwin2.yml
@@ -34,12 +34,12 @@ jobs:
         run: |
           echo run1
           pwd
-          ls -ls
-          cd ApprovalTests.cpp
+          echo 'about to make cmake-build'
           mkdir -p cmake-build
           cd       cmake-build
           # Debug gives Assembler messages: ... CMakeFiles/Catch2_Tests.dir/main.cpp.o: 'file too big'
           cmake --version
+          echo 'about to build'
           cmake -G 'Unix Makefiles' .. -DCMAKE_BUILD_TYPE=Release -DAPPROVAL_TESTS_BUILD_DOCS=OFF -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
 
       - name: Build
