--- a/.github/workflows/cygwin2.yml
+++ b/.github/workflows/cygwin2.yml
@@ -2,21 +2,15 @@ name: cygwin-by-cygwin
 
 on:
   push:
-    branches:
-      - '*'
   pull_request:
-    branches:
-      - '*'
   schedule:
     - cron: '16 0 * * 3,6'  # <https://crontab.guru/#16_0_*_*_3,6> - "At 00:16 on Wednesday and Saturday."
 
 jobs:
   Cygwin:
     runs-on: windows-latest
-    if: true # Disable this build temporarily
+#    if: false # Disable the build
     timeout-minutes: 42 # See https://github.com/approvals/ApprovalTests.cpp/issues/192
-    strategy:
-      fail-fast: false
 
     defaults:
       run:
@@ -32,34 +26,17 @@ jobs:
 
       - name: Configure
         run: |
-          echo run1
-          pwd
-          echo 'about to make cmake-build'
           mkdir -p cmake-build
           cd       cmake-build
-          # Debug gives Assembler messages: ... CMakeFiles/Catch2_Tests.dir/main.cpp.o: 'file too big'
           cmake --version
-          echo 'about to build'
           cmake -G 'Unix Makefiles' .. -DCMAKE_BUILD_TYPE=Release -DAPPROVAL_TESTS_BUILD_DOCS=OFF -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
 
       - name: Build
         run: |
-          basic() {
-            pwd
-            cd /cygdrive/d/a/ApprovalTests.cpp/ApprovalTests.cpp
-            cd       cmake-build
-            cmake --build . --parallel 4
-          }
-          basic
-        shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
+          cd cmake-build
+          cmake --build . --parallel 4
 
       - name: Test
         run: |
-          basic() {
-            pwd
-            cd /cygdrive/d/a/ApprovalTests.cpp/ApprovalTests.cpp
-            cd       cmake-build
-            ctest --verbose --output-on-failure -C Release
-          }
-          basic
-        shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
+          cd cmake-build
+          ctest --verbose --output-on-failure -C Release
