--- a/.github/workflows/cygwin2.yml
+++ b/.github/workflows/cygwin2.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build
         run: |
           cd cmake-build
-          cmake --build . --parallel 4
+          cmake --build . --keep-going
 
       - name: Test
         run: |
