--- a/.github/workflows/cygwin2.yml
+++ b/.github/workflows/cygwin2.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Build
         run: |
           cd cmake-build
+          # Using make instead of cmake, because cmake --build stopped working in cygwin in 2023
           make -k
 
       - name: Test
