--- a/tests/Catch2_Tests/CMakeLists.txt
+++ b/tests/Catch2_Tests/CMakeLists.txt
@@ -9,11 +9,14 @@ add_executable(${PROJECT_NAME}
         StyleGuide.h
         docs/Catch2DocsSamples.cpp
         namers/Catch2NamerTests.cpp
-        )
+)
 
 set_source_files_properties(main.cpp PROPERTIES SKIP_UNITY_BUILD_INCLUSION YES)
-
-target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests Catch2::Catch2)
+if (APPROVAL_TESTS_USE_CATCH2V3)
+    target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests Catch2::Catch2WithMain)
+else ()
+    target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests Catch2::Catch2)
+endif ()
 target_compile_definitions(${PROJECT_NAME} PRIVATE CATCH_CONFIG_FAST_COMPILE)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
