t Fix CMake_Tests

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -155,7 +155,7 @@ jobs:
       - uses: ./.github/actions/build-and-test
 
   macOS:
-    needs: clang-format
+#    needs: clang-format
     # if: false # Disable this platform temporarily
     runs-on: macos-${{ matrix.os-version }}
     strategy:
@@ -199,7 +199,7 @@ jobs:
       - uses: ./.github/actions/build-and-test
 
   Windows:
-    needs: clang-format
+#    needs: clang-format
     # if: false # Disable this platform temporarily
     runs-on: windows-${{ matrix.os-version }}
     strategy:
