t Fix clang-format issue

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -21,6 +21,8 @@ jobs:
           exclude: './third_party'
           inplace: True
           clangFormatVersion: 9
+      - name: ShowDiff
+        run: git diff
       - uses: EndBug/add-and-commit@v9
         with:
           author_name: Clang GitHub Action
