. t Adding test target that still links to catch2v2 and adding catch2v3

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(Boost_Tests)
 add_subdirectory(Catch2_Tests)
+add_subdirectory(Catch2v3_Tests)
 add_subdirectory(CppUTest_Tests)
 add_subdirectory(GoogleTest_Tests)
 add_subdirectory(DocTest_Tests)
