- F Added support for catch2v3

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(${PROJECT_NAME}
         integrations/FrameworkIntegrations.h
         integrations/boost_test/BoostTestApprovals.h
         integrations/catch/Catch2Approvals.h
+        integrations/catch/Catch2v3Approvals.h
         integrations/cpputest/CppUTestApprovals.h
         integrations/doctest/DocTestApprovals.h
         integrations/fmt/FmtApprovals.h
