--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(catch2_existing_main)
 add_subdirectory(catch2_starter)
 
 add_subdirectory(catch2_v3_existing_main)
+add_subdirectory(catch2_v3_starter)
 
 add_subdirectory(cpputest_existing_main)
 add_subdirectory(cpputest_starter)
