. t rename catch2v2 starter files for consistency with catch2v3

--- a/examples/catch2_starter/CMakeLists.txt
+++ b/examples/catch2_starter/CMakeLists.txt
@@ -2,12 +2,12 @@ if (NOT APPROVAL_TESTS_ENABLE_CATCH2_INTEGRATION)
     return()
 endif ()
 
-# begin-snippet: catch2_starter_cmake
+# begin-snippet: catch2_v2_starter_cmake
 set(EXE_NAME catch2_starter)
 set(CMAKE_CXX_STANDARD 11)
 add_executable(${EXE_NAME}
-        catch2_starter_main.cpp
-        catch2_starter_test.cpp
+        catch2_v2_starter_main.cpp
+        catch2_v2_starter_test.cpp
         )
 target_link_libraries(${EXE_NAME} ApprovalTests::ApprovalTests Catch2v2::Catch2v2)
 
