*** Catch2v3 amalgamated works - will break ordinary Catchv3 - also includes a Catch2v3 standalone test
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,6 +6,9 @@ add_subdirectory(catch2_starter)
 add_subdirectory(catch2_v3_existing_main)
 add_subdirectory(catch2_v3_starter)
 
+add_subdirectory(catch2_v3_amalgamated_starter)
+add_subdirectory(catch2_v3_amalgamated_only)
+
 add_subdirectory(cpputest_existing_main)
 add_subdirectory(cpputest_starter)
 
